--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@splidejs/react-splide": "^0.7.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "sweetalert2": "^11.10.5"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
